examples/invalid/variables11.cp
var a is 1;
var a is 1;